sonarqube i neke promjene na shipmentform